# sqlx-07-byte-array-error

./: Cargo.toml
migrations/: 20230706_users.sql
src/: main.rs
