[package]
name = "sqlx-07-byte-array-error"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.0", features = ["mysql", "runtime-tokio-rustls"] }
tokio = { version = "1.29.1", features = ["rt", "macros"] }
